data/derived/comb/progs/unify/prog5729.ml.out
Characters 69-70:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'a list -> 'a list
       but an expression was expected of type 'a -> 'a list -> 'a
       The type variable 'a occurs inside 'a list
